--- a/InsultGenerator.html
+++ b/InsultGenerator.html
@@ -7,7 +7,12 @@
 <div>
 <h1 id = "title">Feminist Retort Generator</h1>
 </div>
+<div id = "middle">
 <p id = "description"> Insult those heteronormative bastards.</p>
+</div>
+<div>
+<button>Do it.</button>
+</div>
 <script type="text/javascript" src = "http://code.jquery.com/jquery-1.8.0.min.js"></script>
 <script type="text/javascript" src = "sentenceMaker.js"></script>
 </body>
