--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<link rel="stylesheet" type="text/css" href="feministCss">
+	<link rel="stylesheet" type="text/css" href="feministCss.css">
 
 </head>
 <body>
