--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
-	<link rel="stylesheet" type="text/css" href="feministCss.css">
+	<title>Feminist Retort Generator</title>
+	<link rel="stylesheet" type="text/css" href="feministCss">
 
 </head>
 <body>
@@ -8,7 +9,7 @@
 <h1 id = "title">Feminist Retort Generator</h1>
 </div>
 <div id = "middle">
-<p id = "description"> Insult those heteronormative bastards.</p>
+<p id = "description"> Challenge injustice. Stand up for yourself.</p>
 </div>
 <div>
 <button>Do it.</button>
