--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<title>Feminist Retort Generator</title>
-	<link rel="stylesheet" type="text/css" href="feministCss">
+	<link rel="stylesheet" type="text/css" href="feministCss.css">
 
 </head>
 <body>
